---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/create_subnet.json
---
[
    "CreateSubnet": "transaction",
    "Owner address": "local1mg47uqd7stkvqrp57ds7m28txra45u2uzkta8n",
    "Fee(METAL)": "2000.001",
]
